tests/samples/negative/types/bcast_int_to_ptr.ax
module bcast_int_to_ptr;

fn main() -> i32 {
  let address: usize = cast(usize, 0);
  let pointer: *const i32 = bcast(*const i32, address);
  if pointer == null {
    return 0;
  }
  return 1;
}
